Fix no question box not showing

--- a/src/se206/quinzical/styles/quinzical.css
+++ b/src/se206/quinzical/styles/quinzical.css
@@ -20,6 +20,10 @@
     -fx-font-size: 32;
 }
 
+.text-medium {
+    -fx-font-size: 24;
+}
+
 .text-small{
 	-fx-font-size: 16;
 }
